Bugfix - Reiter wird jetzt von Hindernissen blockiert.