@@ -38,20 +38,20 @@ public class Spiel {
     private static final Map<String, KI> schwierigkeitsgrade = new HashMap<>();
 
     public static void main(final String[] args) {
-	final Scanner in = new Scanner(System.in);
+        final Scanner in = new Scanner(System.in);
 
-	Spiel.setupStart(args);
+        Spiel.setupStart(args);
 
-	Spiel.initialisiereSpiel(in, args);
+        Spiel.initialisiereSpiel(in, args);
 
-	Spiel.spieleRunde(in);
+        Spiel.spieleRunde(in);
 
-	System.out.println("Gewonnen hat " + Spiel.andTheWinnerIs());
+        System.out.println("Gewonnen hat " + Spiel.andTheWinnerIs());
 
-	// Spiel hält an dieser Stelle, bis der Benutzer einen Input t�tigt
-	in.nextLine();
+        // Spiel hält an dieser Stelle, bis der Benutzer einen Input t�tigt
+        in.nextLine();
 
-	in.close();
+        in.close();
     }
 
     /**
@@ -62,46 +62,46 @@ public class Spiel {
      */
     private static void initialisiereSpiel(final Scanner in, final String[] parameter) {
 
-	System.out.println("Willkommen zu Arbeitstitel\n");
-	System.out.println("Wähle den Spielmodus [PvP/PvE]");
+        System.out.println("Willkommen zu Arbeitstitel\n");
+        System.out.println("Wähle den Spielmodus [PvP/PvE]");
 
-	Spiel.spielmodusAuswaehlen(in);
+        Spiel.spielmodusAuswaehlen(in);
 
-	Spiel.spieler1 = new Mensch(1);
+        Spiel.spieler1 = new Mensch(1);
 
-	if (Spiel.spielmodus.equals("pve")) {
-	    System.out.println("Wähle den Schwierigkeitsgrad [leicht/mittel/schwer]");
-	    Spiel.schwierigkeitsgradWaehlen(in);
-	} else {
-	    Spiel.spieler2 = new Mensch(2);
-	}
+        if (Spiel.spielmodus.equals("pve")) {
+            System.out.println("Wähle den Schwierigkeitsgrad [leicht/mittel/schwer]");
+            Spiel.schwierigkeitsgradWaehlen(in);
+        } else {
+            Spiel.spieler2 = new Mensch(2);
+        }
 
-	Spiel.spielbrett = Spielbrett.getInstance();
+        Spiel.spielbrett = Spielbrett.getInstance();
     }
 
     /**
      * Vorbereitungen, die vor der ersten Spielereingabe geschehen muessen.
      */
     private static void setupStart(final String... parameter) {
-	Spiel.setParameter(parameter);
-	Spiel.schwierigkeitsgrade.put("leicht", new EasyKI(2));
-	Spiel.schwierigkeitsgrade.put("mittel", new MediumKI(2));
-	Spiel.schwierigkeitsgrade.put("schwer", new HardKI(2));
+        Spiel.setParameter(parameter);
+        Spiel.schwierigkeitsgrade.put("leicht", new EasyKI(2));
+        Spiel.schwierigkeitsgrade.put("mittel", new MediumKI(2));
+        Spiel.schwierigkeitsgrade.put("schwer", new HardKI(2));
     }
 
     private static void setParameter(final String[] parameter) {
 
-	if (parameter != null) {
-	    for (final String s : parameter) {
-		if (s != null) {
-		    switch (s.toUpperCase()) {
-		    case "DEBUG":
-			Spiel.DEBUG = true;
-			break;
-		    }
-		}
-	    }
-	}
+        if (parameter != null) {
+            for (final String s : parameter) {
+                if (s != null) {
+                    switch (s.toUpperCase()) {
+                    case "DEBUG":
+                        Spiel.DEBUG = true;
+                        break;
+                    }
+                }
+            }
+        }
 
     }
 
@@ -112,19 +112,19 @@ public class Spiel {
      * @param Scanner in
      */
     private static void spielmodusAuswaehlen(final Scanner in) {
-	while (Spiel.spielmodus == null) {
-	    switch (in.nextLine().toLowerCase().replaceAll(".*?(pvp|pve).*", "$1")) {
-	    case "pvp":
-		Spiel.spielmodus = "pvp";
-		break;
-	    case "pve":
-		Spiel.spielmodus = "pve";
-		break;
-	    }
-	    if (Spiel.spielmodus == null) {
-		System.out.println("Kein korrekter Spielmodus, bitte 'PvP' oder 'PvE' eingeben.");
-	    }
-	}
+        while (Spiel.spielmodus == null) {
+            switch (in.nextLine().toLowerCase().replaceAll(".*?(pvp|pve).*", "$1")) {
+            case "pvp":
+                Spiel.spielmodus = "pvp";
+                break;
+            case "pve":
+                Spiel.spielmodus = "pve";
+                break;
+            }
+            if (Spiel.spielmodus == null) {
+                System.out.println("Kein korrekter Spielmodus, bitte 'PvP' oder 'PvE' eingeben.");
+            }
+        }
     }
 
     /**
@@ -134,13 +134,13 @@ public class Spiel {
      * @param Scanner in
      */
     private static void schwierigkeitsgradWaehlen(final Scanner in) {
-	while (Spiel.spieler2 == null) {
-	    Spiel.spieler2 = Spiel.schwierigkeitsgrade.get(in.nextLine().toLowerCase());
-	    if (Spiel.spieler2 == null) {
-		System.out
-			.println("Kein korrekter Schwierigkeitsgrad, bitte 'leicht', 'mittel' oder 'schwer' eingeben.");
-	    }
-	}
+        while (Spiel.spieler2 == null) {
+            Spiel.spieler2 = Spiel.schwierigkeitsgrade.get(in.nextLine().toLowerCase());
+            if (Spiel.spieler2 == null) {
+                System.out
+                        .println("Kein korrekter Schwierigkeitsgrad, bitte 'leicht', 'mittel' oder 'schwer' eingeben.");
+            }
+        }
     }
 
     /**
@@ -150,302 +150,302 @@ public class Spiel {
      * @param Scanner in
      */
     private static void spieleRunde(final Scanner in) {
-	while (!Spiel.spielZuEnde()) {
-	    Spiel.kaempfe = new ArrayList<>();
+        while (!Spiel.spielZuEnde()) {
+            Spiel.kaempfe = new ArrayList<>();
 
-	    final Spielobjekt[][] brettAlt = Spiel.spielbrett.copySpielobjekte();
+            final Spielobjekt[][] brettAlt = Spiel.spielbrett.copySpielobjekte();
 
-	    Spiel.setupBewegungsphase();
-	    Spiel.bewegungsphase(in, Spiel.spieler1, brettAlt);
-	    Spiel.bewegungsphase(in, Spiel.spieler2, brettAlt);
+            Spiel.setupBewegungsphase();
+            Spiel.bewegungsphase(in, Spiel.spieler1, brettAlt);
+            Spiel.bewegungsphase(in, Spiel.spieler2, brettAlt);
 
-	    Spiel.updateConsole(Spiel.spielbrett.copySpielobjekte());
+            Spiel.updateConsole(Spiel.spielbrett.copySpielobjekte());
 
-	    Spiel.angriffsphase(in, Spiel.spieler1);
-	    Spiel.angriffsphase(in, Spiel.spieler2);
+            Spiel.angriffsphase(in, Spiel.spieler1);
+            Spiel.angriffsphase(in, Spiel.spieler2);
 
-	    Spiel.kampfphase(in);
+            Spiel.kampfphase(in);
 
-	}
+        }
     }
 
     private static void setupBewegungsphase() {
 
-	Spiel.setNachrichtTemporaerLang("Spieler 1 Bewegungsphase\n");
-	Spiel.setNachrichtTemporaerKurz("Erwarte Eingabe [warten/Figur Position - Ziel Position]");
+        Spiel.setNachrichtTemporaerLang("Spieler 1 Bewegungsphase\n");
+        Spiel.setNachrichtTemporaerKurz("Erwarte Eingabe [warten/Figur Position - Ziel Position]");
 
-	for (final Figur f : Spiel.spieler1.getHelden()) {
-	    f.setIstBewegt(false);
-	}
-	for (final Figur f : Spiel.spieler2.getHelden()) {
-	    f.setIstBewegt(false);
-	}
-	Spiel.updateConsole(Spiel.spielbrett.copySpielobjekte());
+        for (final Figur f : Spiel.spieler1.getHelden()) {
+            f.setIstBewegt(false);
+        }
+        for (final Figur f : Spiel.spieler2.getHelden()) {
+            f.setIstBewegt(false);
+        }
+        Spiel.updateConsole(Spiel.spielbrett.copySpielobjekte());
     }
 
     private static void bewegungsphase(final Scanner in, final Spieler spieler, final Spielobjekt[][] brettAlt) {
 
-	Spiel.addMovementMarks(brettAlt, spieler);
+        Spiel.addMovementMarks(brettAlt, spieler);
 
-	while (spieler.hatNochNichtBewegteFiguren(brettAlt)) {
+        while (spieler.hatNochNichtBewegteFiguren(brettAlt)) {
 
-	    Spiel.setNachrichtTemporaerLang("Spieler " + spieler.getNummer() + ": Bewegungsphase\n");
+            Spiel.setNachrichtTemporaerLang("Spieler " + spieler.getNummer() + ": Bewegungsphase\n");
 
-	    Spiel.updateConsole(brettAlt);
+            Spiel.updateConsole(brettAlt);
 
-	    final String eingabe = in.nextLine();
+            final String eingabe = in.nextLine();
 
-	    if (eingabe.contains("warte")) {
-		Spiel.warten(spieler, brettAlt);
-	    } else {
-		Spiel.bewegen(bewegungBefehleInterpretieren(eingabe, spieler, brettAlt), spieler);
-	    }
+            if (eingabe.contains("warte")) {
+                Spiel.warten(spieler, brettAlt);
+            } else {
+                Spiel.bewegen(Spiel.bewegungBefehleInterpretieren(eingabe, spieler, brettAlt), spieler);
+            }
 
-	    for (int y = 0; y < brettAlt.length; y++) {
-		for (int x = 0; x < brettAlt.length; x++) {
-		    if (Figur.class.isInstance(brettAlt[y][x])) {
-			((Figur) (brettAlt[y][x])).symbolRemoveMarkActive();
-			((Figur) (brettAlt[y][x])).symbolRemoveMarkCanBeAttacked();
-		    }
-		}
-	    }
-	}
+            for (int y = 0; y < brettAlt.length; y++) {
+                for (int x = 0; x < brettAlt.length; x++) {
+                    if (Figur.class.isInstance(brettAlt[y][x])) {
+                        ((Figur) (brettAlt[y][x])).symbolRemoveMarkActive();
+                        ((Figur) (brettAlt[y][x])).symbolRemoveMarkCanBeAttacked();
+                    }
+                }
+            }
+        }
 
-	for (int y = 0; y < brettAlt.length; y++) {
-	    for (int x = 0; x < brettAlt.length; x++) {
-		brettAlt[y][x].symbolRemoveMarkMovementPossible();
-	    }
-	}
-	Spiel.setNachrichtTemporaerLang("Spieler " + spieler.getNummer() + ": Bewegungsphase\n");
+        for (int y = 0; y < brettAlt.length; y++) {
+            for (int x = 0; x < brettAlt.length; x++) {
+                brettAlt[y][x].symbolRemoveMarkMovementPossible();
+            }
+        }
+        Spiel.setNachrichtTemporaerLang("Spieler " + spieler.getNummer() + ": Bewegungsphase\n");
     }
 
     private static void warten(final Spieler spieler, final Spielobjekt[][] brettAlt) {
-	for (final Figur f : spieler.getHelden()) {
-	    f.setIstBewegt(true);
-	}
-	Spiel.setNachrichtTemporaerKurz("Spieler " + spieler.getNummer() + " beendet seine Bewegung.");
+        for (final Figur f : spieler.getHelden()) {
+            f.setIstBewegt(true);
+        }
+        Spiel.setNachrichtTemporaerKurz("Spieler " + spieler.getNummer() + " beendet seine Bewegung.");
     }
 
     public static int[] bewegungBefehleInterpretieren(String eingabe, final Spieler spieler,
-	    final Spielobjekt[][] brettAlt) {
+            final Spielobjekt[][] brettAlt) {
 
-	// Entfernt alle nicht alpha-numerischen Zeichen.
-	eingabe = eingabe.toLowerCase().replaceAll("[\\W_]+", "");
+        // Entfernt alle nicht alpha-numerischen Zeichen.
+        eingabe = eingabe.toLowerCase().replaceAll("[\\W_]+", "");
 
-	final int[] eingabeInt = { -1, -1, -1, -1 };
-	int i = 0;
+        final int[] eingabeInt = { -1, -1, -1, -1 };
+        int i = 0;
 
-	for (final String s : eingabe.split("[^0-9]+")) {
-	    if (!s.isEmpty() && (i < 4)) {
-		eingabeInt[i] = Integer.parseInt(s) - 1;
-		i += 2;
-	    }
-	}
-	i = 1;
-	for (final String s : eingabe.split("[^a-z]+")) {
-	    if (!s.isEmpty() && (i < 4)) {
-		eingabeInt[i] = s.toCharArray()[0] - 'a';
-		i += 2;
-	    }
-	}
+        for (final String s : eingabe.split("[^0-9]+")) {
+            if (!s.isEmpty() && (i < 4)) {
+                eingabeInt[i] = Integer.parseInt(s) - 1;
+                i += 2;
+            }
+        }
+        i = 1;
+        for (final String s : eingabe.split("[^a-z]+")) {
+            if (!s.isEmpty() && (i < 4)) {
+                eingabeInt[i] = s.toCharArray()[0] - 'a';
+                i += 2;
+            }
+        }
 
-	return eingabeInt;
+        return eingabeInt;
 
     }
 
-    private static void bewegen(int[] eingabeInt, Spieler spieler) {
-	final Point start = new Point(eingabeInt[0], eingabeInt[1]);
-	final Point ziel = new Point(eingabeInt[2], eingabeInt[3]);
+    private static void bewegen(final int[] eingabeInt, final Spieler spieler) {
+        final Point start = new Point(eingabeInt[0], eingabeInt[1]);
+        final Point ziel = new Point(eingabeInt[2], eingabeInt[3]);
 
-	if ((start.x >= 0) && (start.y >= 0) && (ziel.x >= 0) && (ziel.y >= 0)) {
+        if ((start.x >= 0) && (start.y >= 0) && (ziel.x >= 0) && (ziel.y >= 0)) {
 
-	    if (!(Spiel.spielbrett.getFeld(start) instanceof Figur)) {
-		Spiel.setNachrichtTemporaerKurz(
-			"Bewegung nicht möglich, da ausgewähltes Objekt keine bewegbare Spielfigur ist.");
-	    }
+            if (!(Spiel.spielbrett.getFeld(start) instanceof Figur)) {
+                Spiel.setNachrichtTemporaerKurz(
+                        "Bewegung nicht möglich, da ausgewähltes Objekt keine bewegbare Spielfigur ist.");
+            }
 
-	    if (Spiel.spielbrett.getFeld(start).bewegungMoeglich(ziel, true)) {
+            if (Spiel.spielbrett.getFeld(start).bewegungMoeglich(ziel, true)) {
 
-		if (!((Figur) Spiel.spielbrett.getFeld(start)).istBewegt()) {
+                if (!((Figur) Spiel.spielbrett.getFeld(start)).istBewegt()) {
 
-		    if (((Figur) Spiel.spielbrett.getFeld(start)).getTeam().equals(spieler)) {
-			((Figur) Spiel.spielbrett.getFeld(start)).bewegen(ziel);
-			Spiel.setNachrichtTemporaerKurz("Erwarte Eingabe [warten/Figur Position - Ziel Position]");
-		    } else {
-			Spiel.setNachrichtTemporaerKurz("Zug nicht möglich, da ausgewähltes Figur nicht Spieler "
-				+ spieler.getNummer() + " gehört.");
-		    }
-		} else {
-		    Spiel.setNachrichtTemporaerKurz(
-			    "Zug nicht möglich, da ausgewähltes Figur diese Runde bereits bewegt wurde.");
-		}
-	    }
-	} else {
-	    Spiel.setNachrichtTemporaerKurz("Zug nicht möglich, die eingegebenen Koordinaten waren nicht korrekt.");
-	}
+                    if (((Figur) Spiel.spielbrett.getFeld(start)).getTeam().equals(spieler)) {
+                        ((Figur) Spiel.spielbrett.getFeld(start)).bewegen(ziel);
+                        Spiel.setNachrichtTemporaerKurz("Erwarte Eingabe [warten/Figur Position - Ziel Position]");
+                    } else {
+                        Spiel.setNachrichtTemporaerKurz("Zug nicht möglich, da ausgewähltes Figur nicht Spieler "
+                                + spieler.getNummer() + " gehört.");
+                    }
+                } else {
+                    Spiel.setNachrichtTemporaerKurz(
+                            "Zug nicht möglich, da ausgewähltes Figur diese Runde bereits bewegt wurde.");
+                }
+            }
+        } else {
+            Spiel.setNachrichtTemporaerKurz("Zug nicht möglich, die eingegebenen Koordinaten waren nicht korrekt.");
+        }
     }
 
     private static void angriffsphase(final Scanner in, final Spieler spieler) {
 
-	Spiel.setNachrichtTemporaerLang(String.format("Spieler %d: Angriffssphase%n", spieler.getNummer()));
-	Spiel.setNachrichtTemporaerKurz(
-		"Erwartete Eingabe: [Startkoordinaten, Zielkoordinaten, Schere/Stein/Papier]: ");
+        Spiel.setNachrichtTemporaerLang(String.format("Spieler %d: Angriffssphase%n", spieler.getNummer()));
+        Spiel.setNachrichtTemporaerKurz(
+                "Erwartete Eingabe: [Startkoordinaten, Zielkoordinaten, Schere/Stein/Papier]: ");
 
-	while (Spiel.hatOffeneAngriffsMoeglichkeiten(spieler)) {
+        while (Spiel.hatOffeneAngriffsMoeglichkeiten(spieler)) {
 
-	    Spiel.updateConsole(Spiel.getSpielbrett().copySpielobjekte());
+            Spiel.updateConsole(Spiel.getSpielbrett().copySpielobjekte());
 
-	    final String eingabe = in.nextLine();
-	    Spiel.angreifen(angriffsBefehleInterpretieren(eingabe, spieler), eingabe, spieler);
-	    Spiel.removeSymbolMarks();
-	}
+            final String eingabe = in.nextLine();
+            Spiel.angreifen(Spiel.angriffsBefehleInterpretieren(eingabe, spieler), eingabe, spieler);
+            Spiel.removeSymbolMarks();
+        }
 
     }
 
     private static void removeSymbolMarks() {
 
-	for (int y = 0; y < Spiel.getSpielbrett().getYLaenge(); y++) {
-	    for (int x = 0; x < Spiel.getSpielbrett().getXLaenge(); x++) {
-		if (Figur.class.isInstance(Spiel.getSpielbrett().getFeld(new Point(x, y)))) {
-		    ((Figur) (Spiel.getSpielbrett().getFeld(new Point(x, y)))).symbolRemoveMarkActive();
-		    ((Figur) (Spiel.getSpielbrett().getFeld(new Point(x, y)))).symbolRemoveMarkCanBeAttacked();
-		}
-	    }
-	}
+        for (int y = 0; y < Spiel.getSpielbrett().getYLaenge(); y++) {
+            for (int x = 0; x < Spiel.getSpielbrett().getXLaenge(); x++) {
+                if (Figur.class.isInstance(Spiel.getSpielbrett().getFeld(new Point(x, y)))) {
+                    ((Figur) (Spiel.getSpielbrett().getFeld(new Point(x, y)))).symbolRemoveMarkActive();
+                    ((Figur) (Spiel.getSpielbrett().getFeld(new Point(x, y)))).symbolRemoveMarkCanBeAttacked();
+                }
+            }
+        }
     }
 
     private static void addMovementMarks(final Spielobjekt[][] brettAlt, final Spieler spieler) {
-	for (final Figur f : spieler.getHelden()) {
-	    if (!f.istBewegt()) {
-		((Figur) (brettAlt[f.getPosition().y][f.getPosition().x])).symbolAddMarkActive();
-		for (int y = 0; y < brettAlt.length; y++) {
-		    for (int x = 0; x < brettAlt[y].length; x++) {
-			if (f.bewegungMoeglich(new Point(x, y), false)) {
-			    brettAlt[y][x].symbolAddMarkMovementPossible();
-			}
-		    }
-		}
-	    }
-	}
+        for (final Figur f : spieler.getHelden()) {
+            if (!f.istBewegt()) {
+                ((Figur) (brettAlt[f.getPosition().y][f.getPosition().x])).symbolAddMarkActive();
+                for (int y = 0; y < brettAlt.length; y++) {
+                    for (int x = 0; x < brettAlt[y].length; x++) {
+                        if (f.bewegungMoeglich(new Point(x, y), false) && brettAlt[y][x].isEmpty()) {
+                            brettAlt[y][x].symbolAddMarkMovementPossible();
+                        }
+                    }
+                }
+            }
+        }
     }
 
     private static boolean hatOffeneAngriffsMoeglichkeiten(final Spieler spieler) {
 
-	boolean hatNoch = false;
+        boolean hatNoch = false;
 
-	for (final Figur f : spieler.getHelden()) {
-	    for (int yZiel = 0; yZiel < Spiel.spielbrett.getYLaenge(); yZiel++) {
-		for (int xZiel = 0; xZiel < Spiel.spielbrett.getXLaenge(); xZiel++) {
-		    // TODO: Abfrage, ob Kampf bereits stattfindet.
-		    if (f.angriffMoeglich(new Point(xZiel, yZiel))) {
-			((Figur) (Spiel.spielbrett.getFeld(new Point(xZiel, yZiel)))).symbolAddMarkCanBeAttacked();
-			f.symbolAddMarkActive();
-			hatNoch = true;
-		    }
-		}
-	    }
-	}
+        for (final Figur f : spieler.getHelden()) {
+            for (int yZiel = 0; yZiel < Spiel.spielbrett.getYLaenge(); yZiel++) {
+                for (int xZiel = 0; xZiel < Spiel.spielbrett.getXLaenge(); xZiel++) {
+                    // TODO: Abfrage, ob Kampf bereits stattfindet.
+                    if (f.angriffMoeglich(new Point(xZiel, yZiel))) {
+                        ((Figur) (Spiel.spielbrett.getFeld(new Point(xZiel, yZiel)))).symbolAddMarkCanBeAttacked();
+                        f.symbolAddMarkActive();
+                        hatNoch = true;
+                    }
+                }
+            }
+        }
 
-	return hatNoch;
+        return hatNoch;
     }
 
     private static void kampfphase(final Scanner in) {
-	if (Spiel.kaempfe.size() > 0) {
-	    // Kämpfe austragen, der Printline hinzufügen, Tote entfernen,
-	    // Spielbrett anzeigen.
-	    Spiel.setNachrichtTemporaerKurz("");
-	    // Gegenseitiges Angreifen
-	    Kampf.kaempfen(Spiel.kaempfe);
-	    Spiel.kaempfe.clear();
+        if (Spiel.kaempfe.size() > 0) {
+            // Kämpfe austragen, der Printline hinzufügen, Tote entfernen,
+            // Spielbrett anzeigen.
+            Spiel.setNachrichtTemporaerKurz("");
+            // Gegenseitiges Angreifen
+            Kampf.kaempfen(Spiel.kaempfe);
+            Spiel.kaempfe.clear();
 
-	    Spiel.setNachrichtTemporaerLang(String.format("Ausgetragene Kämpfe:%n"));
+            Spiel.setNachrichtTemporaerLang(String.format("Ausgetragene Kämpfe:%n"));
 
-	    Spiel.getSpielbrett().toteEntfernen();
+            Spiel.getSpielbrett().toteEntfernen();
 
-	    Spiel.updateConsole(Spiel.spielbrett.copySpielobjekte());
+            Spiel.updateConsole(Spiel.spielbrett.copySpielobjekte());
 
-	    System.out.println("Drücken Sie Enter um den Kampfbericht zu verlassen.");
-	    in.nextLine();
-	}
+            System.out.println("Drücken Sie Enter um den Kampfbericht zu verlassen.");
+            in.nextLine();
+        }
     }
 
     public static int[] angriffsBefehleInterpretieren(String eingabe, final Spieler spieler) {
 
-	// Entfernt alle nicht alpha-numerischen Zeichen.
-	eingabe = eingabe.toLowerCase().replaceAll("[\\W_]+", "");
+        // Entfernt alle nicht alpha-numerischen Zeichen.
+        eingabe = eingabe.toLowerCase().replaceAll("[\\W_]+", "");
 
-	final int[] eingabeInt = { -1, -1, -1, -1 };
-	int i = 0;
+        final int[] eingabeInt = { -1, -1, -1, -1 };
+        int i = 0;
 
-	for (final String s : eingabe.split("[^0-9]+")) {
-	    if (!s.isEmpty() && (i < 4)) {
-		eingabeInt[i] = Integer.parseInt(s) - 1;
-		i += 2;
-	    }
-	}
-	i = 1;
-	for (final String s : eingabe.split("[^a-z]+")) {
-	    if (!s.isEmpty() && (i < 4)) {
-		eingabeInt[i] = s.toCharArray()[0] - 'a';
-		i += 2;
-	    }
-	}
+        for (final String s : eingabe.split("[^0-9]+")) {
+            if (!s.isEmpty() && (i < 4)) {
+                eingabeInt[i] = Integer.parseInt(s) - 1;
+                i += 2;
+            }
+        }
+        i = 1;
+        for (final String s : eingabe.split("[^a-z]+")) {
+            if (!s.isEmpty() && (i < 4)) {
+                eingabeInt[i] = s.toCharArray()[0] - 'a';
+                i += 2;
+            }
+        }
 
-	return eingabeInt;
+        return eingabeInt;
 
     }
 
-    private static void angreifen(int[] eingabeInt, String eingabe, Spieler spieler) {
-	final Point start = new Point(eingabeInt[0], eingabeInt[1]);
-	final Point ziel = new Point(eingabeInt[2], eingabeInt[3]);
+    private static void angreifen(final int[] eingabeInt, final String eingabe, final Spieler spieler) {
+        final Point start = new Point(eingabeInt[0], eingabeInt[1]);
+        final Point ziel = new Point(eingabeInt[2], eingabeInt[3]);
 
-	// Start und Ziel wurden eingegeben
-	if ((start.x >= 0) && (start.y >= 0) && (ziel.x >= 0) && (ziel.y >= 0)) {
-	    // Start ist eine Figur, dann Angriffsart auslesen.
-	    if (Figur.class.isInstance(Spiel.spielbrett.getFeld(start))) {
-		// Start Figur gehört Spieler
-		if (((Figur) (Spiel.spielbrett.getFeld(start))).getTeam().equals(spieler)) {
-		    // Ziel ist eine Figur
-		    if (Figur.class.isInstance(Spiel.spielbrett.getFeld(ziel))) {
-			// Figur kann Ziel angreifen
-			if (((Figur) (Spiel.spielbrett.getFeld(start))).angriffMoeglich(ziel)) {
-			    final String ssp = eingabe.replaceAll(".*?(schere|stein|papier).*", "$1");
-			    if (ssp.contains("schere") || ssp.contains("stein") || ssp.contains("papier")) {
-				// Füge neuen Kampf zu Kämpfe hinzu
-				Spiel.kaempfe.add(new Kampf((Figur) (Spiel.spielbrett.getFeld(start)),
-					(Figur) (Spiel.spielbrett.getFeld(ziel)), ssp));
-			    } else {
-				Spiel.setNachrichtTemporaerKurz(
-					"Angriff nicht möglich: Angriffsart wurde nicht korrekt eingegeben.");
-			    }
+        // Start und Ziel wurden eingegeben
+        if ((start.x >= 0) && (start.y >= 0) && (ziel.x >= 0) && (ziel.y >= 0)) {
+            // Start ist eine Figur, dann Angriffsart auslesen.
+            if (Figur.class.isInstance(Spiel.spielbrett.getFeld(start))) {
+                // Start Figur gehört Spieler
+                if (((Figur) (Spiel.spielbrett.getFeld(start))).getTeam().equals(spieler)) {
+                    // Ziel ist eine Figur
+                    if (Figur.class.isInstance(Spiel.spielbrett.getFeld(ziel))) {
+                        // Figur kann Ziel angreifen
+                        if (((Figur) (Spiel.spielbrett.getFeld(start))).angriffMoeglich(ziel)) {
+                            final String ssp = eingabe.replaceAll(".*?(schere|stein|papier).*", "$1");
+                            if (ssp.contains("schere") || ssp.contains("stein") || ssp.contains("papier")) {
+                                // Füge neuen Kampf zu Kämpfe hinzu
+                                Spiel.kaempfe.add(new Kampf((Figur) (Spiel.spielbrett.getFeld(start)),
+                                        (Figur) (Spiel.spielbrett.getFeld(ziel)), ssp));
+                            } else {
+                                Spiel.setNachrichtTemporaerKurz(
+                                        "Angriff nicht möglich: Angriffsart wurde nicht korrekt eingegeben.");
+                            }
 
-			} else {
-			    Spiel.setNachrichtTemporaerKurz(
-				    "Angriff nicht möglich: Startfigur kämpft bereits oder Zielfigur ist außer Reichweite.");
-			}
-		    } else {
-			Spiel.setNachrichtTemporaerKurz("Angriff nicht möglich: Zielkoordinate hat keine Figur.");
-		    }
-		} else {
-		    Spiel.setNachrichtTemporaerKurz(String
-			    .format("Angriff nicht möglich: Figur gehört nicht Spieler %d.", spieler.getNummer()));
-		}
-	    } else {
-		Spiel.setNachrichtTemporaerKurz("Angriff nicht möglich: Startkoordinate hat keine Figur.");
-	    }
-	} else {
-	    Spiel.setNachrichtTemporaerKurz("Angriff nicht möglich: Koordinaten waren nicht korrekt.");
-	}
+                        } else {
+                            Spiel.setNachrichtTemporaerKurz(
+                                    "Angriff nicht möglich: Startfigur kämpft bereits oder Zielfigur ist außer Reichweite.");
+                        }
+                    } else {
+                        Spiel.setNachrichtTemporaerKurz("Angriff nicht möglich: Zielkoordinate hat keine Figur.");
+                    }
+                } else {
+                    Spiel.setNachrichtTemporaerKurz(String
+                            .format("Angriff nicht möglich: Figur gehört nicht Spieler %d.", spieler.getNummer()));
+                }
+            } else {
+                Spiel.setNachrichtTemporaerKurz("Angriff nicht möglich: Startkoordinate hat keine Figur.");
+            }
+        } else {
+            Spiel.setNachrichtTemporaerKurz("Angriff nicht möglich: Koordinaten waren nicht korrekt.");
+        }
     }
 
     public static boolean figurGreiftAn(final Figur f) {
 
-	for (final Kampf k : Spiel.kaempfe) {
-	    if (k.getAngreifer() == f) {
-		return true;
-	    }
-	}
-	return false;
+        for (final Kampf k : Spiel.kaempfe) {
+            if (k.getAngreifer() == f) {
+                return true;
+            }
+        }
+        return false;
     }
 
     /**
@@ -454,7 +454,7 @@ public class Spiel {
      * @return true, falls einer der Spieler keine Helden mehr hat.
      */
     private static boolean spielZuEnde() {
-	return (Spiel.spieler1.istBesiegt() || Spiel.spieler2.istBesiegt());
+        return (Spiel.spieler1.istBesiegt() || Spiel.spieler2.istBesiegt());
     }
 
     /**
@@ -463,98 +463,98 @@ public class Spiel {
      * @return gewinner
      */
     private static String andTheWinnerIs() {
-	String gewinner;
-	if (Spiel.spieler1.istBesiegt() && !Spiel.spieler2.istBesiegt()) {
-	    gewinner = Spiel.spieler2.toString() + "!";
-	} else if (!Spiel.spieler1.istBesiegt() && Spiel.spieler2.istBesiegt()) {
-	    gewinner = Spiel.spieler1.toString() + "!";
-	} else if (Spiel.spieler1.istBesiegt() && Spiel.spieler2.istBesiegt()) {
-	    gewinner = "niemand! Alle tot! So ist das im Krieg, es gibt nur Verlierer.";
-	} else {
-	    gewinner = "noch keiner (sollte nicht eintreten)";
-	}
-	return gewinner;
+        String gewinner;
+        if (Spiel.spieler1.istBesiegt() && !Spiel.spieler2.istBesiegt()) {
+            gewinner = Spiel.spieler2.toString() + "!";
+        } else if (!Spiel.spieler1.istBesiegt() && Spiel.spieler2.istBesiegt()) {
+            gewinner = Spiel.spieler1.toString() + "!";
+        } else if (Spiel.spieler1.istBesiegt() && Spiel.spieler2.istBesiegt()) {
+            gewinner = "niemand! Alle tot! So ist das im Krieg, es gibt nur Verlierer.";
+        } else {
+            gewinner = "noch keiner (sollte nicht eintreten)";
+        }
+        return gewinner;
     }
 
     public static void updateConsole(final Spielobjekt[][] brett) {
-	if (Spiel.DEBUG) {
-	    for (int i = 0; i < 20; i++) {
-		System.out.println();
-	    }
-	} else {
-	    Spiel.clearConsole();
-	}
+        if (Spiel.DEBUG) {
+            for (int i = 0; i < 20; i++) {
+                System.out.println();
+            }
+        } else {
+            Spiel.clearConsole();
+        }
 
-	Spiel.spielbrett.printBoard(brett);
+        Spiel.spielbrett.printBoard(brett);
 
-	for (final String s : Spiel.nachricht) {
-	    Spiel.printNachricht(s);
-	}
+        for (final String s : Spiel.nachricht) {
+            Spiel.printNachricht(s);
+        }
     }
 
     private static void clearConsole() {
 
-	try {
-	    if (System.getProperty("os.name").contains("Windows")) {
-		new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
-	    } else {
-		Runtime.getRuntime().exec("clear");
-	    }
+        try {
+            if (System.getProperty("os.name").contains("Windows")) {
+                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+            } else {
+                Runtime.getRuntime().exec("clear");
+            }
 
-	} catch (IOException | InterruptedException e) {
-	    System.err.println("Fehler beim Neuzeichnen des Spielfeldes: " + e);
-	}
+        } catch (IOException | InterruptedException e) {
+            System.err.println("Fehler beim Neuzeichnen des Spielfeldes: " + e);
+        }
 
     }
 
     private static void printNachricht(final String nachricht) {
-	if ((nachricht != null) && !nachricht.equals("")) {
-	    System.out.println(nachricht);
-	}
+        if ((nachricht != null) && !nachricht.equals("")) {
+            System.out.println(nachricht);
+        }
     }
 
     public static Spieler getSpieler1() {
-	return Spiel.spieler1;
+        return Spiel.spieler1;
     }
 
     public static void setSpieler1(final Spieler spieler1) {
-	Spiel.spieler1 = spieler1;
+        Spiel.spieler1 = spieler1;
     }
 
     public static Spieler getSpieler2() {
-	return Spiel.spieler2;
+        return Spiel.spieler2;
     }
 
     public static void setSpieler2(final Spieler spieler2) {
-	Spiel.spieler2 = spieler2;
+        Spiel.spieler2 = spieler2;
     }
 
     public static Spielbrett getSpielbrett() {
-	return Spiel.spielbrett;
+        return Spiel.spielbrett;
     }
 
     public static void setSpielbrett(final Spielbrett spielbrett) {
-	Spiel.spielbrett = spielbrett;
+        Spiel.spielbrett = spielbrett;
     }
 
     public static String getNachrichtTemporaerLang() {
-	return Spiel.nachricht[0];
+        return Spiel.nachricht[0];
     }
 
     public static String getNachrichtTemporaerKurz() {
-	return Spiel.nachricht[1];
+        return Spiel.nachricht[1];
     }
 
     public static void setNachrichtTemporaerLang(final String nachricht) {
-	Spiel.nachricht[0] = nachricht;
+        Spiel.nachricht[0] = nachricht;
     }
 
     public static void setNachrichtTemporaerKurz(final String nachricht) {
-	Spiel.nachricht[1] = nachricht;
+        Spiel.nachricht[1] = nachricht;
     }
 
     public static ArrayList<Kampf> getKaempfe() {
-	return Spiel.kaempfe;
+        return Spiel.kaempfe;
     }
 
 }
